--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -36,4 +36,5 @@ app_setup_block: |
 
 # changelog
 changelogs:
+  - { date: "01.06.20:", desc: "Rebasing to alpine 3.12." }
   - { date: "23.05.20:", desc: "Initial Release." }
